# cuEquivariance

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSION  VISUALIZATION_README.md  copyright.py  demo_visualization.py  example_visualization.py  ssh-signing-test.md  test_visualization.py
cuequivariance/: pyproject.toml
cuequivariance/cuequivariance/: SKILL.md  __init__.py  __main__.py  equivariant_polynomial.py  equivariant_tensor_product.py  operation.py  segmented_operand.py  segmented_polynomial.py  tensor_product_execution.py
cuequivariance/cuequivariance/descriptors/: __init__.py  escn.py  gatr.py  irreps_tp.py  rotations.py  spherical_harmonics_.py  symmetric_contractions.py  transposition.py
cuequivariance/cuequivariance/equivariant_tensor_product/: __init__.py  basic_tp.py  equivariant_tensor_product.py  escn.py  etp_examples_.py  rotations.py  spherical_harmonics_.py  stp_examples.py  symmetric_contractions.py  transposition.py
cuequivariance/cuequivariance/etc/: linalg.py
cuequivariance/cuequivariance/experimental/: escn.py
cuequivariance/cuequivariance/group_theory/: __init__.py  equivariant_polynomial.py  equivariant_tensor_product.py  ir_dict_polynomial.py
cuequivariance/cuequivariance/irreps_array/: __init__.py  context_decorator.py  context_irrep_class.py  context_layout.py  irrep_utils.py  irreps.py  irreps_and_layout.py  irreps_layout.py  misc_ui.py  numpy_irreps_array.py  reduced_tensor_product.py
cuequivariance/cuequivariance/misc/: linalg.py  sympy_utils.py
cuequivariance/cuequivariance/representation/: __init__.py  rep.py  (+4 more)
cuequivariance/tests/: context_test.py  equivariant_polynomial_test.py  equivariant_tensor_products_test.py  import_test.py  irreps_array_test.py  reduced_tensor_product_test.py  segmented_polynomial_test.py  tensor_product_execution_test.py
(+248 files in other folders)
